<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name"> ELP</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_fingerprint">One-touch Sign In</string>
    <string name="desc_fingerprint">Please place your fingertip on the scanner to verify your identity</string>
    <string name="note">(Fingerprint sign in makes your app login much faster. Your device should have at least one fingerprint registered in device settings)</string>
    <string name="title_activity_home">Fingerprint</string>
    <string name="activity_home_desc">You have successfully logged in with fingerprint authentication</string>
    <string name="activity_home_note">Close and re-open the app to see the fingerprint auth screen again</string>
<string name="ok">Ok</string>
    <string name="Window_title">Loading Point</string>
    <string name="title_activity_login">Login</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="title_activity_user_profile">SHREEF GROUP APP</string>
    <string name="location_updated_message" />
    <string name="latitude_label" />
    <string name="longitude_label" />
    <string name="last_update_time_label" />
    <string name="btnTakePicture">Capture Image</string>
    <string name="btnRecordVideo">Record Video</string>
    <string name="or">(or)</string>
    <string name="btnUploadToServer"> Upload to Server</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="cell_Id">CellTOwer ID</string>
    <string name="GPRS">GPRS</string>
    <string name="GPRS_acc">GPRS access point</string>
    <string name="Change_pass">Change Password</string>
    <string name="Comp_code">Company Code</string>
    <string name="LP_Code">LP Code</string>
    <string name="Server_Ip">Server IP</string>
    <string name="Server_host">Server Host</string>
    <string name="imagebutton">Capture Images</string>
    <string name="Snap_Photo">Take Images</string>
    <string name="Cancel">Cancel</string>
    <string name="Reg_num">Registration number</string>
    <string name="Mode">Set Application Mode</string>
    <string name="image"></string>
    <string name="spinner_sel"></string>
    <string name="Image_res">Set Compression Percentage</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="lbl_you_are_at">YOU ARE AT</string>
    <string name="btn_get_location">GET MY LOCATION</string>
    <string name="btn_start_location_updates">START LOCATION UPDATES</string>
    <string name="btn_stop_location_updates">STOP LOCATION UPDATES</string>
    <string name="WELCOM"></string>
    <string name="Registration">New Vechicle Registration</string>
    <string name="ApplyLeave">ApplyLeave</string>
    <string name="TakeSurvey">TakeSurvey</string>
    <string name="growers">Growers</string>
    <string name="Villages">Villages</string>
    <string name="Circle">Circle</string>
    <string name="title_activity_camra">CamraActivity</string>
    <string name="title_activity_location_finder">LocationFinderActivity</string>
    <string name="latitude_string" />
    <string name="longitude_string" />
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_surveydetailedactivity_list">Items</string>
    <string name="title_surveydetailedactivity_detail">SurveyDetailedActivity Detail</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_load_spinner">LoadSpinner</string>
    <string name="action_settings">Settings</string>
    <string name="capture_image" />
    <string name="recapture_image" />
    <string name="newline" />
    <string name="hintSearchbranch" />
    <string name="spinner_title">Please Select Circle</string>
    <string name="spinner_title2">Please Select Village</string>
    <string name="label_cencle">Cencel</string>
    <string name="label_email">Email</string>
    <string name="label_preview">Preview</string>
    <string name="label_SMS">SMS</string>
    <string name="label_cancel">Cencel</string>
    <string name="title_activity_my2">my2</string>
    <string name="cancel">cancel</string>
    <string name="Arrival">Arrival</string>
    <string name="CheckRegistration">Check Vechicle Registration</string>
    <string name="Photos">Photos in queue</string>
    <string name="Configration">Configuration</string>
    <string name="Update">Update Application</string>
    <string name="app_crashed">app_crashed</string>
</resources>


