<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/tableLayout1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/black">



    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:orientation="horizontal"

        >

        <LinearLayout
            android:id="@+id/LinearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"

            >

            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:text="You can change the application mode"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/white"

                />

        </LinearLayout>

        <!-- <View
             android:layout_width="match_parent"
             android:layout_height="2dp"
             android:background="@color/white"/>-->

        <Button
            android:id="@+id/mode"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@color/black"
            android:hint="Please set the app mode"
             android:textSize="20sp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="#444444"/>

        <!--
                android:background="@drawable/button"
        -->

        <Button
            android:id="@+id/btnTakePhoto"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@color/black"
            android:onClick="onClick"
            android:text="New Vehicle Registration"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="#444444"/>

        <Button
            android:id="@+id/btnArrival"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@color/black"

            android:text="@string/Arrival"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="#444444"/>

        <Button
            android:id="@+id/btncheckvichle"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@color/black"
            android:text="@string/CheckRegistration"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="#444444"/>

        <Button
            android:id="@+id/btnqueue"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/black"
            android:text="@string/Photos"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="#444444"/>

        <Button
            android:id="@+id/btnConfigration"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@color/black"

            android:text="@string/Configration"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="#444444"/>

        <Button
            android:id="@+id/btnupdate"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@color/black"
            android:text="Update"
            android:textColor="@color/white"
            android:textSize="20sp"/>

        <View
            android:layout_height="1dp"
            android:background="#444444"/>

    </TableLayout>

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/black"

        >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="Developed By...MIS Department Sharif Group"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:textStyle="bold"/>
    </LinearLayout>

</TableLayout>